clipboard feature ready

--- a/myClipboard/index.html
+++ b/myClipboard/index.html
@@ -37,7 +37,7 @@
         <p class=" text-base lg:text-xl font-normal text-slate-400">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
     </div>
-    <div class="feature-section w-screen h-screen flex flex-col items-center justify-center lg:flex-row gap-x-28 lg:mt-16 mt-36">
+    <div class="feature-section w-screen  flex flex-col items-center justify-center lg:flex-row gap-x-28 lg:mt-16 mt-36">
       <div class="product-image w-1/2 lg:-ml-7 h-full">
         <img src="./images/image-computer.png" alt="" class=" object-fill">
       </div>
@@ -56,5 +56,32 @@
         </div>
       </div>
     </div>
+    <div class="feature-2 w-screen  flex flex-col items-center justify-center mt-32">
+      <div class="title-feature-2  lg:mt-20">
+        <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">Access Clipboard Anywhere
+        </h1>
+      </div>
+      <div class="snipet-description max-w-3xl mt-10 text-center leading-loose">
+        <p class=" text-base lg:text-xl font-normal text-slate-400">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      </div>
+      <div class="product-image w-1/2 mt-24 h-full">
+        <img src="./images/image-devices.png" alt="" class="mx-auto">
+      </div>
+    </div>
+    <div class="worlflow flex flex-col items-center justify-center">
+      <div class="heading">
+        <div class="title-feature-2  lg:mt-20">
+          <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">Supercharge your workflow
+          </h1>
+        </div>
+        <div class="snipet-description max-w-3xl mt-10 text-center leading-loose">
+          <p class=" text-base lg:text-xl font-normal text-slate-400">We've got the tools to boost your productivity.</p>
+        </div>
+      </div>
+      <div class="features"></div>
+      <div class="companies"></div>
+      <div class="download"></div>
+    </div>
+    <div class="footer"></div>
   </body>
 </html>
