--- a/myClipboard/index.html
+++ b/myClipboard/index.html
@@ -4,84 +4,260 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>MyClipboard</title>
+
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Clipboard Website</title>
   </head>
   <body>
-    <div class="hero flex flex-col items-center justify-content p-10 ">
-      <div class="logo mt-20">
-        <img src="./images/logo.svg" alt="" class="logo">
-      </div>
-      <div class="title mt-16">
-        <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">A history of everything you copy</h1>
-      </div>
-      <div class="description max-w-3xl mt-8 text-center leading-loose">
-        <p class="text-2xl font-normal text-slate-400">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
-      </div>
-      <div class="nav-btns flex flex-col lg:flex-row mt-9 text-white text-xl lg:gap-x-3 lg:gap-y-0 gap-y-4 lg:w-auto w-full">
-        <button class="download-ios bg-teal-400 px-8 py-4 rounded-full">Download for ios</button>
-        <button class="download-mac bg-violet-400 px-8 py-4 rounded-full">Download for mac</button>
-      </div>
-    </div>
-    <div class="snippet flex flex-col items-center justify-content p-10">
-      <div class="title-snippet  lg:mt-20">
-        <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">Keep track of your snippets</h1>
-      </div>
-      <div class="snipet-description max-w-3xl mt-8 text-center leading-loose">
-        <p class=" text-base lg:text-xl font-normal text-slate-400">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
-      </div>
-    </div>
-    <div class="feature-section w-screen  flex flex-col items-center justify-center lg:flex-row gap-x-28 lg:mt-16 mt-36">
-      <div class="product-image w-1/2 lg:-ml-7 h-full">
-        <img src="./images/image-computer.png" alt="" class=" object-fill">
-      </div>
-      <div class="feature-list w-1/2 h-full ">
-        <div class="quick-search mt-16 ">
-          <h1 class="text-2xl text-center lg:text-left font-bold text-slate-600">Quick Search</h1>
-          <p class="text-xl text-center lg:text-left lg:w-2/3 text-slate-400 mt-3">Easily search your snippets by content, category, web address, application, and more.</p>
-        </div>
-        <div class="icloud-sync mt-10">
-          <h1 class="text-2xl text-center lg:text-left font-bold text-slate-600">iCloud Sync</h1>
-          <p class="text-xl text-left lg:w-2/3 text-slate-400 mt-3">Instantly saves and syncs snippets across all your devices.</p>
-        </div>
-        <div class="completely-history mt-10">
-          <h1 class="text-2xl text-center lg:text-left font-bold text-slate-600">Completely History</h1>
-          <p class="text-xl text-left lg:w-2/3 text-slate-400 mt-3">Retrieve any snippets from the first moment you started using the app.</p>
+    <!-- Hero Section -->
+    <section id="hero">
+      <div class="section-container mb-40 pt-16">
+        <img src="images/logo.svg" alt="" class="mx-auto my-16" />
+
+        <h3>A history of everything you copy</h3>
+
+        <p class="section-content mb-10 text-2xl">
+          Clipboard allows you to track and organize everything you copy.
+          Instantly access your clipboard on all your devices.
+        </p>
+
+        <!-- Button Container -->
+        <div class="button-container">
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80"
+          >
+            Download for iOS
+          </a>
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80"
+          >
+            Download for Mac
+          </a>
         </div>
       </div>
-    </div>
-    <div class="feature-2 w-screen  flex flex-col items-center justify-center mt-32">
-      <div class="title-feature-2  lg:mt-20">
-        <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">Access Clipboard Anywhere
-        </h1>
+    </section>
+
+    <!-- Snippets Section -->
+    <section id="snippets">
+      <div class="section-container my-20">
+        <h3>Keep track of your snippets</h3>
+        <p class="section-content mb-24 text-xl">
+          Clipboard instantly stores any item you copy in the cloud, meaning you
+          can access your snippets immediately on all your devices. Our Mac and
+          iOS apps will help you organize everything.
+        </p>
       </div>
-      <div class="snipet-description max-w-3xl mt-10 text-center leading-loose">
-        <p class=" text-base lg:text-xl font-normal text-slate-400">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
-      </div>
-      <div class="product-image w-1/2 mt-24 h-full">
-        <img src="./images/image-devices.png" alt="" class="mx-auto">
-      </div>
-    </div>
-    <div class="worlflow flex flex-col items-center justify-center">
-      <div class="heading">
-        <div class="title-feature-2  lg:mt-20">
-          <h1 class="text-4xl lg:text-5xl font-bold text-slate-600 text-center">Supercharge your workflow
-          </h1>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features">
+      <div class="section-container my-20">
+        <div class="relative flex flex-col md:flex-row md:space-x-32">
+          <!-- Image -->
+          <div class="md:w-1/2">
+            <img
+              src="images/image-computer.png"
+              alt=""
+              class="md:absolute top-0 right-[50%]"
+            />
+          </div>
+
+          <!-- Items Container -->
+          <div
+            class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16"
+          >
+            <!-- Item 1 -->
+            <div>
+              <h5>Quick Search</h5>
+              <p class="max-w-md text-grayishBlue">
+                Easily search your snippets by content, category, web address,
+                application, and more.
+              </p>
+            </div>
+            <!-- Item 2 -->
+            <div>
+              <h5>iCloud Sync</h5>
+              <p class="max-w-md text-grayishBlue">
+                Instantly saves and syncs snippets across all your devices.
+              </p>
+            </div>
+            <!-- Item 3 -->
+            <div>
+              <h5>Completely History</h5>
+              <p class="max-w-md text-grayishBlue">
+                Retrieve any snippets from the first moment you started using
+                the app.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="snipet-description max-w-3xl mt-10 text-center leading-loose">
-          <p class=" text-base lg:text-xl font-normal text-slate-400">We've got the tools to boost your productivity.</p>
+      </div>
+    </section>
+
+    <!-- Access Anywhere Section -->
+    <section id="access">
+      <div class="section-container my-20">
+        <h3>Access Clipboard Anywhere</h3>
+        <p class="section-content mb-24 text-xl">
+          Whether you’re on the go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+
+        <img src="images/image-devices.png" alt="" class="mx-auto" />
+      </div>
+    </section>
+
+    <!-- Supercharge Section -->
+    <section id="supercharge">
+      <div class="section-container my-20">
+        <h3>Supercharge your workflow</h3>
+        <p class="section-content mb-16 text-xl">
+          We've got the tools to boost your productivity.
+        </p>
+        <!-- Items Container -->
+        <div
+          class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12"
+        >
+          <!-- Item 1 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-blacklist.svg" alt="" class="mb-6" />
+            <h5>Create Blacklists</h5>
+            <p class="max-w-md text-grayishBlue">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-text.svg" alt="" class="mb-6" />
+            <h5>Plain Text Snippets</h5>
+            <p class="max-w-md text-grayishBlue">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-preview.svg" alt="" class="mb-6" />
+            <h5>Sneak Preview</h5>
+            <p class="max-w-md text-grayishBlue">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="features"></div>
-      <div class="companies"></div>
-      <div class="download"></div>
-    </div>
-    <div class="footer"></div>
+    </section>
+
+    <!-- References Section -->
+    <section id="references">
+      <div
+        class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0"
+      >
+        <img src="images/logo-google.png" alt="" />
+        <img src="images/logo-ibm.png" alt="" />
+        <img src="images/logo-microsoft.png" alt="" />
+        <img src="images/logo-hp.png" alt="" />
+        <img src="images/logo-vector-graphics.png" alt="" />
+      </div>
+    </section>
+
+    <!-- Bottom CTA Section -->
+    <section id="bottom">
+      <div class="section-container my-20">
+        <h3>Clipboard for iOS and MacOS</h3>
+        <p class="section-content mb-10 text-xl">
+          Available for free on the App Store. Download for Mac or iOS, sync
+          with iCloud and you're ready to start adding to your clipboard.
+        </p>
+
+        <!-- Button Container -->
+        <div class="button-container">
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80"
+          >
+            Download for iOS
+          </a>
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80"
+          >
+            Download for Mac
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="bg-gray-50">
+      <div class="section-container">
+        <div class="flex flex-col items-center justify-between md:flex-row">
+          <!-- Image -->
+          <img src="images/logo.svg" alt="" class="scale-50" />
+          <!-- Container for Menus & Social -->
+          <div
+            class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue"
+          >
+            <!-- Menus -->
+            <div
+              class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-x-24 md:space-y-0"
+            >
+              <!-- Menu 1 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div><a href="#" class="hover:text-strongCyan">FAQs</a></div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Contact Us</a>
+                </div>
+              </div>
+              <!-- Menu 2 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Privacy Policy</a>
+                </div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Press Kit</a>
+                </div>
+              </div>
+              <!-- Menu 3 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Install Guide</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Social Icons -->
+            <div class="flex justify-between w-32 py-1">
+              <a href="#"
+                ><img
+                  src="images/icon-facebook.svg"
+                  alt=""
+                  class="duration-200 ficon"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/icon-twitter.svg"
+                  alt=""
+                  class="duration-200 ficon"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/icon-instagram.svg"
+                  alt=""
+                  class="duration-200 ficon"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
